# Vae

./: .gitignore  README.md  inference.py  main.py  mnist_vae.py  model.py  pyproject.toml  requirements.txt  static.py  train.py  utils.py
checkpoints/: MNIST_vae_model_20_dim.pt  MNIST_vae_model_2_dim.pt  mnist_vae_model.pt
