[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vae"
version = "0.1.0"
description = "Variational WAutoencoder for MNIST digit generation and reconstruction"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "EeureKaaa", email = "3288518748@qq.com"}
]
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pillow>=11.1.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
tracking = ["wandb>=0.19.8"]

[tool.setuptools]
py-modules = ["main", "model", "train", "inference", "utils"]

[project.scripts]
vae-run = "main:main"
